# palette-swap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/audio/: music.0cc
data/enemies/: Apparition.json  Armor.json  Clone.json  Dragon.json  Drake.json  KingMush.json  Kobold Mage.json  Kobold Warrior.json  Mushroom.json  Raven.json  Slime.json  Spear Soldier.json  Spider.json  Sword Soldier.json  Titho.json  TrainingDummy.json  TreeAnt.json  Wraith.json  enemies.json
data/items/: amulets.json  armor.json  baubles.json  rings.json  spells.json  weapons.json
data/level_configurations/: final_level.json  help_level.json  level_one.json  level_two.json
data/level_generation_conf/: 0.json  1.json  2.json  3.json  4.json
data/level_room_rotations/: help_level.csv
data/level_rooms/: final_level.csv  help_level.csv  level_one.csv  level_two.csv
data/room_templates/: entrance.json  event.json  exit.json  hidden.json
data/rooms/: bot_closing_room.csv  left_closing_room.csv  room_big_bot_left.csv  room_big_bot_right.csv  room_big_side.csv  room_big_side_bot.csv  room_big_side_bot_next_level.csv  room_big_side_top.csv  room_big_top_left.csv  room_big_top_right.csv  room_bot_opening.csv  room_full_opening.csv  room_horizontal.csv  room_last_level.csv  room_left_opening.csv  room_next_level.csv  room_next_level_help.csv  room_right_closing.csv  room_right_opening.csv  room_top_closing.csv  room_top_opening.csv  room_vertical.csv  room_void.csv  room_with_stair.csv
data/schemata/: attack_schema.json  items_schema.json
ext/: .clang-tidy  project_path.hpp  project_path.hpp.in
ext/soloud/contrib/: CMakeLists.txt  src.cmake
shaders/: AOE.vs.glsl  aoe.fs.glsl  boss_intro.vs.glsl  coloured.vs.glsl  combat_cond.fs.glsl  combat_cond.vs.glsl  death.fs.glsl  death.vs.glsl  enemy.fs.glsl  enemy.vs.glsl  fancy_bar.fs.glsl  fancy_bar.vs.glsl  health_bar.fs.glsl  health_bar.vs.glsl  light.fs.glsl  light_triangles.fs.glsl  light_triangles.vs.glsl  lighting.fs.glsl  lighting.vs.glsl  oval.fs.glsl  pebble.vs.glsl  player.fs.glsl  player.vs.glsl  rectangle.fs.glsl  rectangle.vs.glsl  salmon.fs.glsl  salmon.vs.glsl  spell.fs.glsl  spell.vs.glsl  spritesheet.fs.glsl  text_bubble.fs.glsl  textured.fs.glsl  textured.vs.glsl  tilemap.fs.glsl  tilemap.vs.glsl  water.fs.glsl  water.vs.glsl
src/: .clang-format  .clang-tidy  ai_system.cpp  ai_system.hpp  animation_system.cpp  animation_system.hpp  combat_system.cpp  combat_system.hpp  common.cpp  common.hpp  components.cpp  components.hpp  geometry.cpp  geometry.hpp  lighting_system.cpp  lighting_system.hpp  loot_system.cpp  loot_system.hpp  main.cpp  map_generator.cpp  map_generator.hpp  map_generator_system.cpp  map_generator_system.hpp  map_utility.cpp  map_utility.hpp  music_system.cpp  music_system.hpp  physics_system.cpp  physics_system.hpp  predefined_room.hpp  render_system.cpp  render_system.hpp  render_system_init.cpp  story_init.cpp  story_init.hpp  story_system.cpp  story_system.hpp  tiny_ecs.cpp  tiny_ecs.hpp  tiny_ecs_registry.hpp  (+13 more)
